<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEBE9"
    android:elevation="10dp"
    tools:context=".ProductFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/product_fragment_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/product_fragment_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EFEBE9"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Product"
                app:titleMarginStart="50dp"
                app:titleTextColor="@color/black" />

            <ImageView
                android:id="@+id/product_fragment_cart_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_baseline_lock_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/product_fragment_tool_bar"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

            <ImageView
                android:id="@+id/product_fragment_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/product_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/product_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_fragment_appbar_layout" />

    <TextView
        android:id="@+id/product_fragment_body_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/body_type"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_fragment_appbar_layout"/>


    <RelativeLayout
        android:id="@+id/product_fragment_product_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_fragment_title">

        <androidx.cardview.widget.CardView
            android:id="@+id/product_fragment_lower_image_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/product_fragment_background_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="150sp"
                    app:layout_constraintBottom_toTopOf="@+id/product_fragment_model_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/product_fragment_model_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/model_type"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/product_fragment_state_text_view"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/product_fragment_state_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/state"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/product_fragment_price_text_view"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/product_fragment_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/model_id"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/product_fragment_product_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:layout_constraintBottom_toTopOf="@+id/product_fragment_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/product_fragment_button"/>

                <Button
                    android:id="@+id/product_fragment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/price_in_figure"
                    android:textColor="#FFD700"
                    app:backgroundTint="#303030"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/product_fragment_top_card_view"
            android:layout_width="330dp"
            android:layout_height="250dp"
            android:layout_alignTop="@+id/product_fragment_lower_image_card_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-75dp"
            android:backgroundTint="#ECEFF1"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/product_fragment_car_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/old_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_price"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/product_fragment_product_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/new_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_price"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="22dp"
        app:layout_constraintTop_toBottomOf="@+id/product_fragment_product_layout"
        app:layout_constraintStart_toEndOf="@id/old_price_text_view"/>


    <TextView
        android:id="@+id/mileage_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_mileage"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/product_fragment_product_layout"
        app:layout_constraintEnd_toEndOf="parent"/>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/prduct_fragment_add_to_cart_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_to_cart_background"
        android:backgroundTint="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/product_fragment_exterior_color_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/product_fragment_add_to_cart_button"
            app:layout_constraintStart_toStartOf="parent" />



        <TextView
            android:id="@+id/product_fragment_engine_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="30dp"
            android:text="Total: $300.00"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/product_fragment_add_to_cart_button"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/product_fragment_add_to_cart_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#303030"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="Click to View More"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFD700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>